@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-11-01T08:13:50Z",
-  "count_outdated" : 211,
-  "uniques_outdated" : 182,
-  "count" : 219,
-  "uniques" : 190,
+  "timestamp" : "2023-11-03T08:13:38Z",
+  "count_outdated" : 213,
+  "uniques_outdated" : 184,
+  "count" : 220,
+  "uniques" : 191,
   "clones" : [
-    {
-      "timestamp": "2023-10-20T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2023-10-23T00:00:00Z",
       "count": 1,
@@ -61,6 +52,15 @@
     },
     {
       "timestamp": "2023-11-01T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-11-03T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
