@@ -1,12 +1,7 @@
 {
-  "count": 8,
-  "uniques": 3,
+  "count": 7,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2023-10-20T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2023-10-23T00:00:00Z",
       "count": 1,
@@ -34,6 +29,11 @@
     },
     {
       "timestamp": "2023-11-01T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-11-03T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
