@@ -1,3 +1,12 @@
+2023-11-03T08:13:38Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6742749519 # 1309
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-03
+* notice: last 14d: unq all: 2 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 182 211 / 190 219
+* notice: next accum: outdated-unq outdated-all / unq all: 184 213 / 191 220
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2023-10-20] / [2023-11-03]
+
 2023-11-01T08:13:50Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6717295192 # 1303
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-01
